增加Dagger2 +Ｍｖｐ 示例

--- a/app/src/main/res/layout/activity_mvp_sample.xml
+++ b/app/src/main/res/layout/activity_mvp_sample.xml
@@ -11,4 +11,10 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="me.koterwong.androidlibs.ui.activity.nvpsample.MvpSampleActivity">
 
+<TextView
+    android:id="@+id/text"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"/>
+
+
 </RelativeLayout>
