--- a/AndroidMvp/src/main/res/values/colors.xml
+++ b/AndroidMvp/src/main/res/values/colors.xml
@@ -86,7 +86,7 @@
   <!--text color -->
   <color name="text_all_black">#000000</color>
   <color name="text_transparent_black">#90000000</color>
-  <color name="text_black">#3e3e3e</color>
+  <color name="text_black_grey">#3e3e3e</color>
   <color name="text_grey">#6e6e6e</color>
   <color name="text_light_grey">#9e9e9e</color>
   <color name="text_yellow">#FEE94E</color>
